# nsql1h26-anim

./: .env  .gitignore  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  nginx.conf  report.docx  Макет-и-сценарий-использования.md
backend/: .env  Dockerfile.prod  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/database/: driver.py
backend/app/database/seeders/: mock.py  user_seeder.py
backend/app/http/schemas/: filters.py  request.py  response.py
backend/app/repositories/: base.py  post_repository.py  user_repository.py
backend/app/services/: user_service.py
backend/backups/: backup.json
backend/src/: main.py
backend/src/api/: deps.py  router.py
backend/src/api/v1/: auth.py  comments.py  posts.py  stats.py  system.py  taxons.py  users.py
backend/src/core/: config.py  constants.py  exceptions.py  security.py  utils.py
backend/src/database/: db.py  models.py
backend/src/database/seeders/: post_seeder.py  (+1 more)
backend/src/models/: animal.py  base.py  comment.py  post.py  tag.py  taxon.py  user.py
backend/src/repositories/: animal_repository.py  base.py  comment_repository.py  post_repository.py  stats_repository.py  tag_repository.py  user_repository.py
backend/src/schemas/: animal.py  base.py  comment.py  error.py  identity.py  pagination.py  post.py  request.py  response.py  tag.py  token.py
backend/src/services/: animal_service.py  auth_service.py  comment_service.py  post_service.py  stats_service.py  system_service.py  tag_service.py  taxon_service.py  user_service.py
backend/storage/: .gitignore
(+81 files in other folders)
